--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                             in the input array.
                         </p>
                         <div class="example">
-                            <strong>Example Input:</strong> [16, 17, 5, 5, 5, 2]<br />
+                            <strong>Example Input:</strong> [16, 17, 5, 1, 2]<br />
                             <strong>Example Output:</strong> 17 5 2
                         </div>
                     </div>
@@ -136,8 +136,7 @@
                         <div class="example">
                             <strong>Example Input:</strong> schoollifeisusefull,
                             schoollongofuselike<br />
-                            <strong>Example Output:</strong> life , long<br />usefull ,
-                            uselike
+                            <strong>Example Output: </strong> <br />ifeis , ongof <br /> full , like
                         </div>
                     </div>
                     <div class="problem">
