--- a/zoho-round3/index.html
+++ b/zoho-round3/index.html
@@ -83,7 +83,7 @@
                     <div class="intro-video">
                         <h4>Complete Preparation Guide</h4>
                         <p>For detailed preparation tips and strategies, watch our comprehensive guide:</p>
-                        <a href="https://youtu.be/kQtCywpWfWg?si=K0tZ5VA8Xh8zm4p4" target="_blank" class="video-link-btn">
+                        <a href="https://youtu.be/ASvmn2Agkuc?si=x2JsziXu3Qxh7Ak0" target="_blank" class="video-link-btn">
                             <i class="fas fa-play-circle"></i> Watch Preparation Video
                         </a>
                     </div>
